# lnurl-hydra-login

./: .gitignore  Dockerfile  docker-compose.yml  init-db.sql  pyproject.toml
k8s/: kustomization.yaml  secrets.yaml
k8s/cloudflared/: configmap.yaml  deployment.yaml
k8s/hydra/: configmap.yaml  deployment.yaml  migration-job.yaml  service.yaml
k8s/login-app/: configmap.yaml  deployment.yaml  service.yaml
src/lnurl_hydra_login/: __init__.py  __main__.py  app.py  auth.py  config.py  db.py  hydra.py  qr_utils.py  sse.py
src/lnurl_hydra_login/templates/: login.html
