[project]
name = "lnurl-hydra-login"
version = "0.1.0"
description = "LNURL-auth login provider for Ory Hydra"
requires-python = ">=3.11"
dependencies = [
    "quart>=0.19.0",
    "asyncpg>=0.29.0",
    "httpx>=0.28.1",
    "lnurl>=0.4.0",
    "qrcode>=7.4.2",
    "pillow>=10.0.0",
    "redis>=5.0.0",
    "cryptography>=41.0.0",
    "hypercorn>=0.17.0",
]

[project.scripts]
lnurl-hydra-login = "lnurl_hydra_login.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lnurl_hydra_login"]
